# aloe

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  README.md  gen_lut.py  pyproject.toml  renovate.json  tune-greedy.yml.old  tune-sweep.yml.old
.github/workflows/: cli-test.yml  ghcr-publish.yml  python-format.yml  python-lint.yml  rust-clippy.yml  rust-doc.yml  rust-fmt.yml  rust-test.yml  tune-greedy.yml  tune-sweep.yml
crates/aloe/: Cargo.toml
crates/aloe-cli/: Cargo.toml
crates/aloe-cli/src/: cli.rs  lib.rs  main.rs
crates/aloe-core/: Cargo.toml
crates/aloe-core/src/: eskf.rs  lib.rs  quantize.rs  state_machine.rs
crates/aloe-gui/: Cargo.toml
crates/aloe-gui/src/: lib.rs
crates/aloe-gui/static/css/: style.css
crates/aloe-gui/static/js/: app.js
crates/aloe-gui/templates/: index.html
crates/aloe-sim/: Cargo.toml
crates/aloe-sim/src/: filter.rs  lib.rs  params.rs  sensor.rs  sim.rs
crates/aloe/src/: main.rs
rust/: Cargo.toml
rust/src/: eskf.rs  lib.rs  lut_data.rs  quantize.rs  sensor.rs  sim.rs  state_machine.rs
src/aloe/: __main__.py  cli.py  filter.py  gui.py  params.py  sim.py
