[project]
name = "aloe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nolan Poe", email = "npgo22@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "nicegui>=3.7.1",
    "numpy>=2.4.2",
    "plotly>=6.5.2",
    "polars>=1.38.1",
    "xlsxwriter>=3.2.9",
]

[project.scripts]
aloe = "aloe.__main__:main"

[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
python-source = "src"
module-name = "aloe.aloe_core"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "maturin>=1.5",
    "ruff>=0.15.0",
]

[tool.black]
line-length=120
