[package]
name = "aloe_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "aloe_core"
crate-type = ["cdylib", "rlib"]

[features]
default = ["hosted"]
hosted = []
embassy = ["dep:embassy-time"]

[dependencies]
nalgebra = { version = "0.34.1", default-features = false, features = ["libm"] }
libm = "0.2.16"
pyo3 = { version = "0.28", features = ["extension-module"] }
embassy-time = { version = "0.5.0", optional = true }
