[package]
name = "aloe-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aloe-core.workspace = true
aloe-sim.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
csv = "1.3"
nalgebra.workspace = true
