[package]
name = "aloe"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
default-run = "aloe"

[[bin]]
name = "aloe"
path = "src/main.rs"

[dependencies]
aloe-core.workspace = true
aloe-sim.workspace = true
aloe-cli = { path = "../aloe-cli" }
aloe-gui = { path = "../aloe-gui" }
clap.workspace = true
anyhow.workspace = true
axum = "0.8"
tokio.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = "0.31.0"
